add downloader as an endpoint on the server
